- vorple.audio.playSound() accepts an id option that will be attached to the 
  created audio element, and the method returns the audio element
- vorple.layout.scrollTo() and vorple.layout.scrollToEnd() accept a parameter
  that tells how fast the scroll animation should be, or 0 for no animation 
  (default 0.5 seconds), and returns a promise that resolves when the animation
  ends


Project
-------

- Replacing the Emscripten-powered Git engine with Quixe, mentioned above,
  removes the need to compile Git with Emscripten which was not a very
  user-friendly experience. The project's development environment is now much
  easier to get up and running.
- Updated to latest version of Webdriver.io which greatly simplifies the test
  setup required. Npm handles all testing software installation.
- Added a script to automatically build the unit test game


Libraries
---------

- Updated jQuery to 3.4.1 and other libraries to their latest versions


Release 3.1 (2018-11-03)
========================

- BREAKING CHANGE: JavaScript evaluation no longer writes the implicit value of
  the last expression to the return value file. Code must explicitly return a
  value, otherwise the file is left untouched.
- For performance reasons the interpreter now writes the type of the evaluated
  JavaScript expression to a file for Inform to pick up, instead of having the
  Inform extension deduce the type from the value.
- Fixed a bug that prevented a music track from looping if it was started
  when a previous track was already playing
- Added the vorple.audio.pauseBetweenTracks variable to set the duration of the
  pause between tracks in a playlist
- Fixed the return value of debug.off() that was always true but documented to
  be always false
- vorple.requireVersion() returns a boolean that indicates the check status and
  accepts a callback that will be run after the check instead of the default
  one that prints an error message